--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Carla:wght@400;700&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Star Wars</title>
 </head>
 <body>
   <div id="root"></div>
